ontopia-engine/src/test/resources/net/ontopia/testdata/ltm/error/duplicate-prefix2.ltm
#PREFIX myprefix %"http://some-address/#"
#PREFIX myprefix %"http://other-address/#"
